--- a/Impilo App/Views/Screening/ScreeningHome.xaml
+++ b/Impilo App/Views/Screening/ScreeningHome.xaml
@@ -8,11 +8,11 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Margin="-87,-100,-910,-290">
         <Grid Margin="94,90,-57,-164">
-             <!--<Label Content="HIV" Height="42" HorizontalAlignment="Left" Margin="42,18,0,0" x:Name="label16" VerticalAlignment="Top" Width="181" FontWeight="Bold" />-->
-                                        
+            <!--<Label Content="HIV" Height="42" HorizontalAlignment="Left" Margin="42,18,0,0" x:Name="label16" VerticalAlignment="Top" Width="181" FontWeight="Bold" />-->
+
             <TabControl Height="602" HorizontalAlignment="Left" Margin="0" x:Name="RugbyTabControl" VerticalAlignment="Top" Width="1205" Background="{x:Null}" BorderThickness="0" >
 
-                <TabItem Header="Biography" x:Name="tabCountry" Width="100">
+                <TabItem Header="Currently Screened" x:Name="tabCountry" Width="130">
                     <Grid Margin="0,0,-0.2,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="149*"/>
@@ -42,22 +42,25 @@
                                         </LinearGradientBrush>
                                     </Border.BorderBrush>
                                     <Grid x:Name="grid4" Margin="6,6,6.6,18">
-                                        <Label Content="Date of screen" Height="28" HorizontalAlignment="Left" Margin="19,105,0,0" x:Name="label3" VerticalAlignment="Top" FontWeight="Bold" />
-                                        <TextBox TabIndex="1" Height="23" HorizontalAlignment="Left" Margin="145,110,0,0" x:Name="txtDateOfScreening" VerticalAlignment="Top" Width="253" FontWeight="Bold" />
-                                        <Label Content="ID No" Height="28" HorizontalAlignment="Left" Margin="19,57,0,0" x:Name="label1_Copy2" VerticalAlignment="Top" FontWeight="Bold" />
-                                        <Label Content="Gender" Height="28" HorizontalAlignment="Left" Margin="21,268,0,0" x:Name="label2_Copy3" VerticalAlignment="Top" FontWeight="Bold" />
-                                        <RadioButton x:Name="rdoMale" TabIndex="4" Content="Male" HorizontalAlignment="Left" Margin="147,274,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                        <RadioButton x:Name="rdoFemale" TabIndex="5" Content="Female" HorizontalAlignment="Left" Margin="228,274,0,0" VerticalAlignment="Top" RenderTransformOrigin="-8.546,9.539" FontWeight="Bold"/>
-                                        <TextBox TabIndex="2" Height="23" HorizontalAlignment="Left" Margin="145,169,0,0" x:Name="txtName" VerticalAlignment="Top" Width="253" FontWeight="Bold" />
-                                        <TextBox TabIndex="0" Height="23" HorizontalAlignment="Left" Margin="145,57,0,0" x:Name="txtIDNumber" VerticalAlignment="Top" Width="253" FontWeight="Bold" />
+                                        <Label Content="Unique Identifier" Height="28" HorizontalAlignment="Left" Margin="21,33,0,0" x:Name="label1_Copy2" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" />
+                                        <Label Content="XXXXXXXXXXXXXXXX" Height="28" HorizontalAlignment="Left" Margin="170,33,0,0" x:Name="label1_Copy" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" />
+                                        <Label Content="Date of screen" Height="28" HorizontalAlignment="Left" Margin="19,155,0,0" x:Name="label3" VerticalAlignment="Top" FontWeight="Bold" />
+                                        <TextBox TabIndex="1" Height="23" HorizontalAlignment="Left" Margin="145,160,0,0" x:Name="txtDateOfScreening" VerticalAlignment="Top" Width="253" FontWeight="Bold" IsEnabled="False" />
+                                        <Label Content="ID No" Height="28" HorizontalAlignment="Left" Margin="21,102,0,0" x:Name="label1_Copy22" VerticalAlignment="Top" FontWeight="Bold" />
+                                        <Label Content="Gender" Height="28" HorizontalAlignment="Left" Margin="21,318,0,0" x:Name="label2_Copy3" VerticalAlignment="Top" FontWeight="Bold" />
+                                        <RadioButton x:Name="rdoMale" TabIndex="4" Content="Male" HorizontalAlignment="Left" Margin="147,324,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                                        <RadioButton x:Name="rdoFemale" TabIndex="5" Content="Female" HorizontalAlignment="Left" Margin="228,324,0,0" VerticalAlignment="Top" RenderTransformOrigin="-8.546,9.539" FontWeight="Bold"/>
+                                        <TextBox TabIndex="2" Height="23" HorizontalAlignment="Left" Margin="145,219,0,0" x:Name="txtName" VerticalAlignment="Top" Width="253" FontWeight="Bold" IsEnabled="False" />
+                                        <TextBox TabIndex="0" Height="23" HorizontalAlignment="Left" Margin="145,107,0,0" x:Name="txtIDNumber" VerticalAlignment="Top" Width="253" FontWeight="Bold" IsEnabled="False" />
+                                       
                                         <!--<ComboBox HorizontalAlignment="Left" Margin="145,57,0,0" VerticalAlignment="Top" Width="253" FontWeight="Bold">
                                             <ComboBoxItem ContentStringFormat="Name"/>
                                         </ComboBox>-->
                                     </Grid>
                                 </Border>
-                                <Label Content="Name" Height="28" HorizontalAlignment="Left" Margin="40,181,0,0" x:Name="label2_Copy" VerticalAlignment="Top" FontWeight="Bold" />
-                                <Label Content="Surname" Height="28" HorizontalAlignment="Left" Margin="40,234,0,0" x:Name="label3_Copy" VerticalAlignment="Top" FontWeight="Bold" />
-                                <TextBox TabIndex="3" Height="23" HorizontalAlignment="Left" Margin="166,240,0,0" x:Name="txtLastName" VerticalAlignment="Top" Width="253" />
+                                <Label Content="Name" Height="28" HorizontalAlignment="Left" Margin="40,231,0,0" x:Name="label2_Copy" VerticalAlignment="Top" FontWeight="Bold" />
+                                <Label Content="Surname" Height="28" HorizontalAlignment="Left" Margin="40,284,0,0" x:Name="label3_Copy" VerticalAlignment="Top" FontWeight="Bold" />
+                                <TextBox TabIndex="3" Height="23" HorizontalAlignment="Left" Margin="166,290,0,0" x:Name="txtLastName" VerticalAlignment="Top" Width="253" IsEnabled="False" />
                             </Grid>
                         </Border>
                     </Grid>
@@ -525,7 +528,7 @@
                                                         <RadioButton Content="Yes" HorizontalAlignment="Left" Margin="120,169,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
                                                         <RadioButton Content="No" HorizontalAlignment="Left" Margin="185,169,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
                                                         <ComboBox HorizontalAlignment="Left" Margin="120,88,0,0" VerticalAlignment="Top" Width="131" FontWeight="Bold">
-                                                           
+
                                                         </ComboBox>
                                                     </Grid>
                                                 </GroupBox>
@@ -976,7 +979,7 @@
                     </LinearGradientBrush>
                 </TabItem.Background>-->
                 </TabItem>
-                <TabItem Header="HIV" x:Name="tabCountdry2_Copy" Width="100" Margin="0,-2,0,0">
+                <TabItem Header="HIV" x:Name="tabCountdry2_Copy" Width="85" Margin="0,-2,0,0">
                     <!--<TabItem.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#8E000000" Offset="1" />
@@ -1034,7 +1037,7 @@
                         </Border>
                     </Grid>
                 </TabItem>
-                <TabItem Header="Maternal Health" x:Name="tabCountsry2_Copy" Width="100">
+                <TabItem Header="Maternal Health" x:Name="tabCountsry2_Copy" Width="115">
                     <!--<TabItem.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#8E000000" Offset="1" />
@@ -1253,7 +1256,7 @@
                         </Border>
                     </Grid>
                 </TabItem>
-                <TabItem Header="Other" x:Name="tabCountdry2_Copy2" Width="100" Margin="0,-2,0,0">
+                <TabItem Header="Other" x:Name="tabCountdry2_Copy2" Width="85" Margin="0,-2,0,0">
                     <!--<TabItem.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#8E000000" Offset="1" />
@@ -1299,7 +1302,7 @@
                         </Border>
                     </Grid>
                 </TabItem>
-                <TabItem Header="Finish Screening" x:Name="tabCountdry2_Copy3" Width="100" Margin="0,-2,0,0">
+                <TabItem Header="Finish Screening" x:Name="tabCountdry2_Copy3" Width="115" Margin="0,-2,0,0">
                     <!--<TabItem.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#8E000000" Offset="1" />
