--- a/Impilo App/Views/Reports/Format2Report.xaml
+++ b/Impilo App/Views/Reports/Format2Report.xaml
@@ -37,10 +37,10 @@
                         				VerticalAlignment="Top" Height="200" Width="200">
 
                         </GroupBox>
-                        <RadioButton Name="radDiabetes" Content="Diabetes" Margin="10,29,284,219" FontWeight="Bold"/>
+                        <RadioButton Name="radDiabetes" Content="Diabetes" Margin="10,29,284,219" FontWeight="Bold" IsChecked="True"/>
                         <RadioButton Name="radHypertension" Content="Hypertension" HorizontalAlignment="Left" Margin="10,51,0,0" VerticalAlignment="Top" RenderTransformOrigin="-4.72,-3.464" FontWeight="Bold"/>
 
-                        <Button Name="btnGenerate" Content="Generate" HorizontalAlignment="Left" Margin="351,104,0,0" VerticalAlignment="Top" Width="182" FontSize="16" FontWeight="Bold" Grid.ColumnSpan="2">
+                        <Button Name="btnGenerate" Content="Generate" HorizontalAlignment="Left" Margin="351,104,0,0" VerticalAlignment="Top" Width="182" FontSize="16" FontWeight="Bold" Grid.ColumnSpan="2" Click="btnGenerate_Click">
                             <Button.Background>
                                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                     <GradientStop Color="#82000000" Offset="0.035" />
